--- a/src/shared/adjusters/html/increaseSizeTemplate.html
+++ b/src/shared/adjusters/html/increaseSizeTemplate.html
@@ -12,10 +12,23 @@
 
 <div class="gpii-increaseSizePreferenceGroup">
 
+    <div class="gpii-prefsEditor-category-hidden gpiic-category-hidden fl-prefsEditor-text">
+        <div class="gpii-prefsEditor-expandedHeading gpii-prefsEditor-category gpiic-category fl-prefsEditor-text">
+            <h2 class="gpii-prefsEditor-firstHeading"><label class="gpiic-increaseSize-appearanceHeading"></label></h2>
+        </div>
+    </div>
+    
     <div class="gpiic-prefsEditor-textSize gpii-prefsEditor-category gpiic-category fl-prefsEditor-text">
     </div>
 
     <div class="gpiic-prefsEditor-cursorSize gpii-prefsEditor-category gpiic-category fl-prefsEditor-text">
+    </div>
+
+
+    <div class="gpii-prefsEditor-category-hidden gpiic-category-hidden fl-prefsEditor-text">
+        <div class="gpii-prefsEditor-expandedHeading gpii-prefsEditor-category gpiic-category fl-prefsEditor-text">
+            <h2><label class="gpiic-increaseSize-magnifierHeading"></label></h2>
+        </div>
     </div>
 
     <div class="gpiic-prefsEditor-magnifier gpii-prefsEditor-category gpiic-category fl-prefsEditor-text">
