--- a/src/shared/adjusters/html/cursorSizeTemplate.html
+++ b/src/shared/adjusters/html/cursorSizeTemplate.html
@@ -1,4 +1,4 @@
-<h2><!-- <span class="fl-icon-size"></span> --><label class="gpiic-increaseSize-cursor-size-label" for="cursor-size"></label></h2>
+<h3><label class="gpiic-increaseSize-cursor-size-label" for="cursor-size"></label></h3>
 
 <div class="gpii-prefsEditor-adjusterIcons gpii-prefsEditor-previewPerSettingContainer">
     <div class="gpii-prefsEditor-adjusterIcons gpii-prefsEditor-previewPerSettingEye"></div>
