GPII-187: Moved all composite adjusters outside sliding panels. This is temporary for testing purposes until this functionality is fixed. It caused some styling problems. MagnifierFollows classes could not be fetched from aux schema. All GPII-187 "increase size" adjusters are available.

--- a/src/shared/adjusters/html/increaseSizeTemplate.html
+++ b/src/shared/adjusters/html/increaseSizeTemplate.html
@@ -18,10 +18,14 @@
         </div>
     </div>
     
-    <div class="gpiic-prefsEditor-textSize gpii-prefsEditor-category gpiic-category fl-prefsEditor-text">
+    <div class="gpiic-prefsEditor-textSize">
+    </div>
+    <div class="gpii-prefsEditor-category gpiic-category fl-prefsEditor-text">
     </div>
 
-    <div class="gpiic-prefsEditor-cursorSize gpii-prefsEditor-category gpiic-category fl-prefsEditor-text">
+    <div class="gpiic-prefsEditor-cursorSize">
+    </div>
+    <div class="gpii-prefsEditor-category gpiic-category fl-prefsEditor-text">
     </div>
 
 
@@ -31,14 +35,21 @@
         </div>
     </div>
 
-    <div class="gpiic-prefsEditor-magnifier gpii-prefsEditor-category gpiic-category fl-prefsEditor-text">
+    <div class="gpiic-prefsEditor-magnifier">
+    </div>
+    <div class="gpii-prefsEditor-category gpiic-category fl-prefsEditor-text">
+    </div>
+
+    <div class="gpiic-prefsEditor-magnifierPosition">
+    </div>
+    <div class="gpiic-prefsEditor-magnifierFollows">
     </div>
 
     <input type="checkbox" id="preferenceSwitchIncreaseSizeExtra" class="gpiic-increaseSize-preferenceSwitchExtra"/>
     <div class="gpii-prefsEditor-category-hidden gpiic-category-hidden fl-prefsEditor-text">
-        <div class="gpiic-prefsEditor-magnifierPosition gpii-prefsEditor-category gpiic-category fl-prefsEditor-text">
+        <div class="gpii-prefsEditor-category gpiic-category fl-prefsEditor-text">
         </div>
-        <div class="gpiic-prefsEditor-magnifierFollows gpii-prefsEditor-category gpiic-category fl-prefsEditor-text">
+        <div class="gpii-prefsEditor-category gpiic-category fl-prefsEditor-text">
         </div>
     </div>
 
