GPII-153, GPII-187: Created a wrapper stepper class gpii.adjuster.textfieldStepper and applied it to PMT and PCP. This leads to the removal of plusMinus component in PMT code.

--- a/src/shared/adjusters/html/magnifierTemplate.html
+++ b/src/shared/adjusters/html/magnifierTemplate.html
@@ -1,15 +1,16 @@
-        <div class="flc-prefsEditor-plus-minus-numerical">
-            <h2><label class="gpiic-increaseSize-plusMinusNumericalLabelMagnifier"></label></h2>
-            
+        <div>
+            <h2><label class="gpiic-magnifier-label"></label></h2>
+
             <div class="gpii-prefsEditor-previewPerSettingContainer">
                 <div class="gpii-prefsEditor-adjusterIcons gpii-prefsEditor-previewPerSettingEye"></div>
                 <div class="gpii-prefsEditor-previewPerSettingEyeBackground"></div>
-                <iframe class="gpii-prefsEditor-previewPerSettingFrame gpiic-increaseSize-previewPerSettingFrameMagnifier" src="" frameborder="0"></iframe>
+                <iframe class="gpiic-magnifier-preview gpii-prefsEditor-previewPerSettingFrame" src="" frameborder="0"></iframe>
             </div>
-        
-            <div class="gpii-increaseSize-plusMinusNumericalWidget">
-                <label class="gpii-increaseSize-plusMinusNumericalMinus gpiic-increaseSize-plusMinusNumericalMinusMagnifier"></label>
-                <input type="text" class="gpii-increaseSize-plusMinusNumericalValue gpiic-increaseSize-plusMinusNumericalValueMagnifier fl-inputs"/>
-                <label class="gpii-increaseSize-plusMinusNumericalPlus gpiic-increaseSize-plusMinusNumericalPlusMagnifier"></label>
+
+            <div class="gpiic-magnifier-stepper gpii-stepper">
+                <label class="gpiic-textfieldStepper-decrement gpii-stepper-buttons"></label>
+                <input type="text" class="gpiic-textfieldStepper-valueField gpii-stepper-valueField fl-inputs"/>
+                <label class="gpiic-textfieldStepper-unitField gpii-stepper-unit"></label>
+                <label class="gpiic-textfieldStepper-increment gpii-stepper-buttons"></label>
             </div>
         </div>
