--- a/src/shared/adjusters/html/textSizeTemplate.html
+++ b/src/shared/adjusters/html/textSizeTemplate.html
@@ -1,5 +1,5 @@
         <div>
-            <h2><label class="gpiic-textSize"></label></h2>
+            <h2><label class="gpiic-textSize-label"></label></h2>
 
             <div class="gpii-prefsEditor-previewPerSettingContainer">
                 <div class="gpii-prefsEditor-adjusterIcons gpii-prefsEditor-previewPerSettingEye"></div>
