GPII-364: Using the contrastTheme adjuster in "Contrast".

--- a/demos/pmt/index.html
+++ b/demos/pmt/index.html
@@ -13,6 +13,7 @@
     <link rel="stylesheet" type="text/css" href="../../src/shared/lib/infusion/framework/preferences/css/fss/fss-theme-lgdg-prefsEditor.css" />
     <link rel="stylesheet" type="text/css" href="../../src/shared/lib/infusion/framework/preferences/css/fss/fss-theme-dglg-prefsEditor.css" />
     <link rel="stylesheet" type="text/css" href="../../src/shared/lib/infusion/framework/preferences/css/fss/fss-theme-yb-prefsEditor.css" />
+    <link rel="stylesheet" type="text/css" href="../../src/shared/lib/infusion/framework/preferences/css/fss/fss-theme-by-prefsEditor.css" />
     <link rel="stylesheet" type="text/css" href="../../src/shared/lib/infusion/framework/preferences/css/PrefsEditor.css" />
     <link rel="stylesheet" type="text/css" href="../../src/shared/lib/infusion/framework/preferences/css/FullPrefsEditor.css" />
 
@@ -28,6 +29,7 @@
 
     <!-- The custom adjusters JS files -->
     <script type="text/javascript" src="../../src/shared/adjusters/js/addContrast.js"></script>
+    <script type="text/javascript" src="../../src/shared/adjusters/js/contrastTheme.js"></script>
     <script type="text/javascript" src="../../src/shared/adjusters/js/highContrast.js"></script>
     <script type="text/javascript" src="../../src/shared/adjusters/js/increaseSizeOld.js"></script>
     <script type="text/javascript" src="../../src/shared/adjusters/js/plusMinus.js"></script>
@@ -38,6 +40,7 @@
     <script type="text/javascript" src="../../src/shared/adjusters/js/magnifierFollows.js"></script>
 
     <!-- The JS files of the enactors of my custom adjusters -->
+    <script type="text/javascript" src="../../src/shared/enactors/js/contrastTheme.js"></script>
     <script type="text/javascript" src="../../src/shared/enactors/js/highContrast.js"></script>
     <script type="text/javascript" src="../../src/shared/enactors/js/textSize.js"></script>
     <script type="text/javascript" src="../../src/shared/enactors/js/cursorSize.js"></script>
