--- a/src/shared/adjusters/html/addContrastTemplate.html
+++ b/src/shared/adjusters/html/addContrastTemplate.html
@@ -10,6 +10,7 @@
 </div>
 <label class="gpii-prefsEditor-addToMyPreferencesLabel gpiic-addToMyPreferencesLabel" for="addToMyPreferencesContrast" tooltip-checked="" tooltip-unchecked="" title=""></label>
 <br/>
-<div class="gpiic-highContrast"></div>
+<div class="gpiic-contrastTheme"></div>
+<!-- <div class="gpiic-highContrast"></div> -->
 <div class="gpii-prefsEditor-category gpiic-category fl-prefsEditor-text">
 </div>
