--- a/src/shared/preview/html/contrastPreview.html
+++ b/src/shared/preview/html/contrastPreview.html
@@ -4,6 +4,9 @@
 <title>Preview</title>
     <link rel="stylesheet" type="text/css" href="../../adjusters/css/adjusters.css" />
     <link rel="stylesheet" type="text/css" href="../../lib/infusion/framework/preferences/css/fss/fss-theme-yb-prefsEditor.css" />
+    <link rel="stylesheet" type="text/css" href="../../lib/infusion/framework/preferences/css/fss/fss-theme-bw-prefsEditor.css" />
+    <link rel="stylesheet" type="text/css" href="../../lib/infusion/framework/preferences/css/fss/fss-theme-wb-prefsEditor.css" />
+    <link rel="stylesheet" type="text/css" href="../../lib/infusion/framework/preferences/css/fss/fss-theme-by-prefsEditor.css" />
 </head>
 <body class="gpii-prefsEditor-previewPerSettingBody">
     <div class="gpii-prefsEditor-previewPerSettingDiv">
