GPII-271: Animation logic of PMT fixed, settings still being sent to a local server

--- a/src/shared/adjusters/html/brailleTemplate.html
+++ b/src/shared/adjusters/html/brailleTemplate.html
@@ -1,4 +1,4 @@
-<div class="gpii-speakText-adjusters gpii-speakText-partially-expanded">
+<div class="gpii-speakText-adjusters">
     <h3><label for="braille" class="gpiic-speakText-screenReaderBrailleOutput-label gpii-speakText-switch"></label></h3>
     <div id="gpii-speakText-brailleOnOff" class="fl-prefsEditor-onoff">
         <input type="checkbox" id="braille" class="gpiic-speakText-screenReaderBrailleOutput" />
