--- a/src/shared/adjusters/html/speakText.html
+++ b/src/shared/adjusters/html/speakText.html
@@ -1,4 +1,4 @@
-<div class="gpii-speakText-adjusters gpii-speakText-partially-expanded gpii-speakText-speakText-element">
+<div class="gpii-speakText-adjusters gpii-speakText-speakText-element">
     <h3><label for="speakText" class="gpiic-speakText-speakText-label gpii-speakText-switch"></label></h3>
     <div id="gpii-speakText-screenReaderOnOff" class="fl-prefsEditor-onoff">
         <input type="checkbox" id="speakText" class="gpiic-speakText-speakText"/>
