--- a/src/shared/adjusters/html/universalVolumeTemplate.html
+++ b/src/shared/adjusters/html/universalVolumeTemplate.html
@@ -1,4 +1,4 @@
-<div class="gpii-speakText-adjusters gpii-volume-partially-expanded">
+<div class="gpii-speakText-adjusters">
     <div class="gpiic-speakText-universalVolume">
         <label class="gpiic-speakText-universalVolume-label gpii-speakText-label"></label><br>
         <div class="gpiic-speakText-universalVolume-description gpii-speakText-description"></div>
