--- a/src/shared/adjusters/html/universalLanguageTemplate.html
+++ b/src/shared/adjusters/html/universalLanguageTemplate.html
@@ -1,4 +1,4 @@
-<div class="gpii-speakText-adjusters gpii-language-partially-expanded ui-widget">
+<div class="gpii-speakText-adjusters ui-widget">
     <label class="gpiic-speakText-universalLanguage-label gpii-speakText-label"></label><br>
     <select class="gpiic-speakText-universalLanguage"></select>
 </div>
