GPII-271: More-less icon added.

--- a/src/pmt/pmtContainer.html
+++ b/src/pmt/pmtContainer.html
@@ -22,8 +22,8 @@
 
             <div class="gpii-speakText-partially-expanded">
                 <div class="gpii-speakText-moreOptions">
-                    <label class="gpii-speakText-moreOptionsIcon"></label>
                     <label class="gpiic-speakText-moreOptionsLabel"></label>
+                    <label class="moreOptionsIcon gpii-speakText-moreOptionsIcon-more"></label>
                 </div>
             </div>
 
