GPII-153, GPII-187: Added preview grades.
The preview grades can be composed in the auxiliary schema to add the various types of previews to an adjuster.
This is currently only working for composite panels due to FLUID-5213

--- a/src/shared/adjusters/html/contrastNewTemplate.html
+++ b/src/shared/adjusters/html/contrastNewTemplate.html
@@ -16,6 +16,6 @@
     <div class="gpii-prefsEditor-previewPerSettingContainer">
         <div class="gpii-prefsEditor-adjusterIcons gpii-prefsEditor-previewPerSettingEye"></div>
         <div class="gpii-prefsEditor-previewPerSettingEyeBackground"></div>
-        <iframe class="gpii-prefsEditor-previewPerSettingFrame gpiic-contrast-previewPerSettingFrameContrast" src="" frameborder="0"></iframe>
+        <iframe class="gpii-prefsEditor-previewPerSettingFrame gpiic-adjuster-preview" src="" frameborder="0"></iframe>
     </div>
 </div>
