--- a/demos/pmt/index.html
+++ b/demos/pmt/index.html
@@ -27,6 +27,7 @@
     <script type="text/javascript" src="../../src/shared/lib/infusion/MyInfusion.js"></script>
 
     <!-- The custom adjusters JS files -->
+    <script type="text/javascript" src="../../src/shared/components/preview/js/preview.js"></script>
     <script type="text/javascript" src="../../src/shared/components/textfieldStepper/js/textfieldStepper.js"></script>
     <script type="text/javascript" src="../../src/shared/adjusters/js/textfieldStepper.js"></script>
     <script type="text/javascript" src="../../src/shared/adjusters/js/contrast.js"></script>
