--- a/src/shared/adjusters/html/cursorSizeTemplate.html
+++ b/src/shared/adjusters/html/cursorSizeTemplate.html
@@ -3,14 +3,14 @@
 <div class="gpii-prefsEditor-adjusterIcons gpii-prefsEditor-previewPerSettingContainer">
     <div class="gpii-prefsEditor-adjusterIcons gpii-prefsEditor-previewPerSettingEye"></div>
     <div class="gpii-prefsEditor-previewPerSettingEyeBackground"></div>
-    <iframe class="gpii-prefsEditor-previewPerSettingFrame gpiic-increaseSize-previewPerSettingFrameCursorSize" src="" frameborder="0"></iframe>
+    <iframe class="gpii-prefsEditor-previewPerSettingFrame gpiic-adjuster-preview" src="" frameborder="0"></iframe>
 </div>
 
 <div class="gpiic-increaseSize-cursor-size-slider">
     <div>
         <div class="gpii-prefsEditor-adjusterIcons gpii-increaseSize-iconSmallCursor" role="img"></div>
         <div class="flc-textfieldSlider-slider fl-force-left fl-slider gpii-prefsEditor-slider gpii-prefsEditor-slider-horz"> </div>
-        <div class="gpii-prefsEditor-adjusterIcons gpii-increaseSize-iconBigCursor" role="img"></div>            
+        <div class="gpii-prefsEditor-adjusterIcons gpii-increaseSize-iconBigCursor" role="img"></div>
     </div>
     <div class="fl-slider-input gpii-prefsEditor-slider-input" style="display:none;"><input id="cursor-size" class="flc-textfieldSlider-field" type="text" /></div>
 </div>
