--- a/src/shared/adjusters/html/textSizeTemplate.html
+++ b/src/shared/adjusters/html/textSizeTemplate.html
@@ -4,7 +4,7 @@
             <div class="gpii-prefsEditor-previewPerSettingContainer">
                 <div class="gpii-prefsEditor-adjusterIcons gpii-prefsEditor-previewPerSettingEye"></div>
                 <div class="gpii-prefsEditor-previewPerSettingEyeBackground"></div>
-                <iframe class="gpiic-textSize-preview gpii-prefsEditor-previewPerSettingFrame" src="" frameborder="0"></iframe>
+                <iframe class="gpiic-textSize-preview gpiic-adjuster-preview" src="" frameborder="0"></iframe>
             </div>
 
             <div class="gpiic-textSize-stepper gpii-stepper">
