--- a/src/shared/adjusters/html/contrastThemeTemplate.html
+++ b/src/shared/adjusters/html/contrastThemeTemplate.html
@@ -1,3 +1,8 @@
+<div class="gpii-prefsEditor-previewPerSettingContainer">
+    <div class="gpii-prefsEditor-adjusterIcons gpii-prefsEditor-previewPerSettingEye"></div>
+    <div class="gpii-prefsEditor-previewPerSettingEyeBackground"></div>
+    <iframe class="gpii-prefsEditor-previewPerSettingFrame gpiic-contrast-previewPerSettingFrameContrast" src="" frameborder="0"></iframe>
+</div>
 <div class="flc-prefsEditor-themeRow fl-choice">
     <input type="radio" class="flc-prefsEditor-themeInput fl-hidden-accessible" name="theme" id="bw" value="bw" />
     <div class="fl-indicator gpii-contrastThemeIndicator"></div>
