--- a/src/shared/adjusters/html/contrastThemeTemplate.html
+++ b/src/shared/adjusters/html/contrastThemeTemplate.html
@@ -1,3 +1,4 @@
+<label class="gpiic-contrast-contrastOptions"></label>
 <div class="gpii-prefsEditor-previewPerSettingContainer">
     <div class="gpii-prefsEditor-adjusterIcons gpii-prefsEditor-previewPerSettingEye"></div>
     <div class="gpii-prefsEditor-previewPerSettingEyeBackground"></div>
