GPII-271: Inappropriate namespaces modified. Need more of that.

--- a/src/shared/adjusters/html/volumeTemplate.html
+++ b/src/shared/adjusters/html/volumeTemplate.html
@@ -1,4 +1,4 @@
-<div class="gpii-speakText-adjusters gpii-speakText-partially-expanded gpii-speakText-volume-element">
+<div class="gpii-speakText-adjusters gpii-partially-expanded gpii-speakText-volume-element">
     <div class="gpiic-speakText-volume">
         <label class="gpiic-speakText-volume-label gpii-speakText-label"></label><br>
         <label class="gpii-textfieldStepper-decrement gpiic-speakText-volume-minus stepperMinus"> </label>
