--- a/src/pmt/pmtContainer.html
+++ b/src/pmt/pmtContainer.html
@@ -20,7 +20,7 @@
             <div class="wordEcho"></div>
             <div class="textHighlighting"></div>
 
-            <div class="gpii-speakText-partially-expanded">
+            <div class="gpii-partially-expanded">
                 <div class="gpii-speakText-moreOptions">
                     <label class="gpiic-speakText-moreOptionsLabel"></label>
                     <label class="moreOptionsIcon gpii-speakText-moreOptionsIcon-more"></label>
