--- a/src/shared/adjusters/html/wordsSpokenPerMinute.html
+++ b/src/shared/adjusters/html/wordsSpokenPerMinute.html
@@ -1,5 +1,5 @@
 <div class="gpii-speakText-adjusters">
-    <div class="gpii-speakText-partially-expanded">
+    <div class="gpii-partially-expanded">
         <div class="gpii-speakText-wordsSpokenPerMinute-element">
             <div class="gpiic-speakText-wordsSpokenPerMinute">
                 <label class="gpiic-speakText-wordsSpokenPerMinute-label gpii-speakText-label"></label><br>
