GPII-271: All inappropriate namespaces modified in PMT. TODO: PCP names fix.

--- a/src/shared/adjusters/html/announceCapitalsTemplate.html
+++ b/src/shared/adjusters/html/announceCapitalsTemplate.html
@@ -1,4 +1,4 @@
-<div class="gpii-speakText-adjusters gpii-speakText-fully-expanded">
-    <input type="checkbox" id="announce-capitals" class="gpiic-speakText-announceCapitals"/>
-    <label for="announce-capitals" class="gpii-speakText-checkboxLabel" ><span class="gpiic-speakText-announceCapitals-label gpii-speakText-checkboxSpan"></span></label>
+<div class="gpii-adjusters gpii-fully-expanded">
+    <input type="checkbox" id="announce-capitals" class="gpiic-announceCapitals"/>
+    <label for="announce-capitals" class="gpii-checkboxLabel" ><span class="gpiic-announceCapitals-label gpii-checkboxSpan"></span></label>
 </div>
