--- a/src/shared/adjusters/html/screenReaderLanguage.html
+++ b/src/shared/adjusters/html/screenReaderLanguage.html
@@ -1,4 +1,4 @@
-<div class="gpii-speakText-adjusters gpii-speakText-fully-expanded ui-widget">
-    <label class="gpiic-speakText-screenReaderLanguage-label gpii-speakText-label"></label><br>
-    <select class="gpiic-speakText-screenReaderLanguage"></select>
+<div class="gpii-adjusters gpii-fully-expanded ui-widget">
+    <label class="gpiic-screenReaderLanguage-label gpii-label"></label><br>
+    <select class="gpiic-screenReaderLanguage"></select>
 </div>
