--- a/src/shared/adjusters/html/speakTutorialMessagesTemplate.html
+++ b/src/shared/adjusters/html/speakTutorialMessagesTemplate.html
@@ -1,4 +1,4 @@
-<div class="gpii-speakText-adjusters gpii-speakText-fully-expanded">
-    <input type="checkbox" id="speak-tutorial" class="gpiic-speakText-speakTutorialMessages"/>
-    <label for="speak-tutorial" class="gpii-speakText-checkboxLabel" ><span class="gpiic-speakText-speakTutorialMessages-label gpii-speakText-checkboxSpan"></span></label>
+<div class="gpii-adjusters gpii-fully-expanded">
+    <input type="checkbox" id="speak-tutorial" class="gpiic-speakTutorialMessages"/>
+    <label for="speak-tutorial" class="gpii-checkboxLabel" ><span class="gpiic-speakTutorialMessages-label gpii-checkboxSpan"></span></label>
 </div>
