--- a/src/shared/adjusters/html/universalLanguageTemplate.html
+++ b/src/shared/adjusters/html/universalLanguageTemplate.html
@@ -1,4 +1,4 @@
-<div class="gpii-speakText-adjusters ui-widget">
-    <label class="gpiic-speakText-universalLanguage-label gpii-speakText-label"></label><br>
-    <select class="gpiic-speakText-universalLanguage"></select>
+<div class="gpii-adjusters ui-widget">
+    <label class="gpiic-universalLanguage-label gpii-label"></label><br>
+    <select class="gpiic-universalLanguage"></select>
 </div>
