--- a/src/shared/adjusters/html/voicePitchTemplate.html
+++ b/src/shared/adjusters/html/voicePitchTemplate.html
@@ -1,8 +1,8 @@
-<div class="gpii-speakText-adjusters gpii-speakText-fully-expanded gpii-speakText-voicePitch-element">
-    <div class="gpiic-speakText-voicePitch">
-        <label class="gpiic-speakText-voicePitch-label gpii-speakText-label"></label><br>
-        <label class="gpii-textfieldStepper-decrement gpiic-speakText-voicePitch-minus stepperMinus"> </label>
+<div class="gpii-adjusters gpii-fully-expanded gpii-voicePitch-element">
+    <div class="gpiic-voicePitch">
+        <label class="gpiic-voicePitch-label gpii-label"></label><br>
+        <label class="gpii-textfieldStepper-decrement gpiic-voicePitch-minus stepperMinus"> </label>
         <input type="text" class="gpii-textfieldStepper-field fl-inputs stepper"/>
-        <label class="gpii-textfieldStepper-increment gpiic-speakText-voicePitch-plus stepperPlus"></label>
+        <label class="gpii-textfieldStepper-increment gpiic-voicePitch-plus stepperPlus"></label>
     </div>
 </div>
