--- a/src/shared/adjusters/html/volumeTemplate.html
+++ b/src/shared/adjusters/html/volumeTemplate.html
@@ -1,8 +1,8 @@
-<div class="gpii-speakText-adjusters gpii-partially-expanded gpii-speakText-volume-element">
-    <div class="gpiic-speakText-volume">
-        <label class="gpiic-speakText-volume-label gpii-speakText-label"></label><br>
-        <label class="gpii-textfieldStepper-decrement gpiic-speakText-volume-minus stepperMinus"> </label>
+<div class="gpii-adjusters gpii-partially-expanded gpii-volume-element">
+    <div class="gpiic-volume">
+        <label class="gpiic-volume-label gpii-label"></label><br>
+        <label class="gpii-textfieldStepper-decrement gpiic-volume-minus stepperMinus"> </label>
         <input type="text" class="gpii-textfieldStepper-field fl-inputs stepper"/>
-        <label class="gpii-textfieldStepper-increment gpiic-speakText-volume-plus stepperPlus"></label>
+        <label class="gpii-textfieldStepper-increment gpiic-volume-plus stepperPlus"></label>
     </div>
 </div>
