--- a/src/pmt/pmtContainer.html
+++ b/src/pmt/pmtContainer.html
@@ -21,9 +21,9 @@
             <div class="textHighlighting"></div>
 
             <div class="gpii-partially-expanded">
-                <div class="gpii-speakText-moreOptions">
-                    <label class="gpiic-speakText-moreOptionsLabel"></label>
-                    <label class="moreOptionsIcon gpii-speakText-moreOptionsIcon-more"></label>
+                <div class="gpii-moreOptions">
+                    <label class="gpiic-moreOptionsLabel"></label>
+                    <label class="moreOptionsIcon gpii-moreOptionsIcon-more"></label>
                 </div>
             </div>
 
