--- a/src/shared/adjusters/html/punctuationVerbosityTemplate.html
+++ b/src/shared/adjusters/html/punctuationVerbosityTemplate.html
@@ -1,10 +1,10 @@
-<div class="gpii-speakText-adjusters gpii-speakText-fully-expanded">
-    <div class="gpii-speakText-label"> Announce </div>
-        <label class="gpiic-speakText-punctuationVerbosity-label gpii-speakText-description"></label>
-        <div class="gpii-speakText-punctuationVerbosity-container">
-            <div class="gpiic-speakText-punctuationVerbosity-row">
-                <input type="radio" class="gpiic-speakText-punctuationVerbosity" id="radioButton-option"/>
-                <label class="gpiic-speakText-punctuationVerbosity-option-label" for="radioButton-option"></label>
+<div class="gpii-adjusters gpii-fully-expanded">
+    <div class="gpii-label"> Announce </div>
+        <label class="gpiic-punctuationVerbosity-label gpii-description"></label>
+        <div class="gpii-punctuationVerbosity-container">
+            <div class="gpiic-punctuationVerbosity-row">
+                <input type="radio" class="gpiic-punctuationVerbosity" id="radioButton-option"/>
+                <label class="gpiic-punctuationVerbosity-option-label" for="radioButton-option"></label>
             </div>
         </div>
     </div>
