--- a/src/shared/adjusters/html/speakTextTemplate.html
+++ b/src/shared/adjusters/html/speakTextTemplate.html
@@ -1,7 +1,7 @@
-<div class="gpii-speakText-adjusters gpii-speakText-speakText-element">
-    <h3><label for="speakText" class="gpiic-speakText-speakText-label gpii-speakText-switch"></label></h3>
-    <div id="gpii-speakText-screenReaderOnOff" class="fl-prefsEditor-onoff">
-        <input type="checkbox" id="speakText" class="gpiic-speakText-speakText"/>
+<div class="gpii-adjusters gpii-speakText-element">
+    <h3><label for="speakText" class="gpiic-speakText-label gpii-switch"></label></h3>
+    <div id="gpii-screenReaderOnOff" class="fl-prefsEditor-onoff">
+        <input type="checkbox" id="speakText" class="gpiic-speakText"/>
         <label for="speakText">
             <span class="fl-prefsEditor-switch" data-checkboxStateOn="ON" data-checkboxStateOff="OFF" tabindex="0">
                 <span class="fl-prefsEditor-switch-inner"></span>
