--- a/src/shared/adjusters/html/universalVolumeTemplate.html
+++ b/src/shared/adjusters/html/universalVolumeTemplate.html
@@ -1,9 +1,9 @@
-<div class="gpii-speakText-adjusters">
-    <div class="gpiic-speakText-universalVolume">
-        <label class="gpiic-speakText-universalVolume-label gpii-speakText-label"></label><br>
-        <div class="gpiic-speakText-universalVolume-description gpii-speakText-description"></div>
-        <label class="gpii-textfieldStepper-decrement gpiic-speakText-universalVolume-minus stepperMinus"></label>
+<div class="gpii-adjusters">
+    <div class="gpiic-universalVolume">
+        <label class="gpiic-universalVolume-label gpii-label"></label><br>
+        <div class="gpiic-universalVolume-description gpii-description"></div>
+        <label class="gpii-textfieldStepper-decrement gpiic-universalVolume-minus stepperMinus"></label>
         <input type="text" class="gpii-textfieldStepper-field fl-inputs stepper"/>
-        <label class="gpii-textfieldStepper-increment gpiic-speakText-universalVolume-plus stepperPlus"></label>
+        <label class="gpii-textfieldStepper-increment gpiic-universalVolume-plus stepperPlus"></label>
     </div>
 </div>
