--- a/src/shared/adjusters/html/wordEchoTemplate.html
+++ b/src/shared/adjusters/html/wordEchoTemplate.html
@@ -1,4 +1,4 @@
-<div class="gpii-speakText-adjusters gpii-speakText-fully-expanded">
-    <input type="checkbox" id="word-echo" class="gpiic-speakText-wordEcho"/>
-    <label for="word-echo" class="gpii-speakText-checkboxLabel" ><span class="gpiic-speakText-wordEcho-label gpii-speakText-checkboxSpan"></span></label>
+<div class="gpii-adjusters gpii-fully-expanded">
+    <input type="checkbox" id="word-echo" class="gpiic-wordEcho"/>
+    <label for="word-echo" class="gpii-checkboxLabel" ><span class="gpiic-wordEcho-label gpii-checkboxSpan"></span></label>
 </div>
