--- a/src/shared/adjusters/html/wordsSpokenPerMinute.html
+++ b/src/shared/adjusters/html/wordsSpokenPerMinute.html
@@ -1,11 +1,11 @@
-<div class="gpii-speakText-adjusters">
+<div class="gpii-adjusters">
     <div class="gpii-partially-expanded">
-        <div class="gpii-speakText-wordsSpokenPerMinute-element">
-            <div class="gpiic-speakText-wordsSpokenPerMinute">
-                <label class="gpiic-speakText-wordsSpokenPerMinute-label gpii-speakText-label"></label><br>
-                <label class="gpii-textfieldStepper-decrement gpiic-speakText-wordsSpokenPerMinute-minus stepperMinus"></label>
+        <div class="gpii-wordsSpokenPerMinute-element">
+            <div class="gpiic-wordsSpokenPerMinute">
+                <label class="gpiic-wordsSpokenPerMinute-label gpii-label"></label><br>
+                <label class="gpii-textfieldStepper-decrement gpiic-wordsSpokenPerMinute-minus stepperMinus"></label>
                 <input type="text" class="gpii-textfieldStepper-field fl-inputs stepper"/>
-                <label class="gpii-textfieldStepper-increment gpiic-speakText-wordsSpokenPerMinute-plus stepperPlus"></label>
+                <label class="gpii-textfieldStepper-increment gpiic-wordsSpokenPerMinute-plus stepperPlus"></label>
             </div>
         </div><br>
     </div>
