GPII-364: Added an onOffSwitch template. This is used in contrastEnabled adjuster. Uses Alex's code and needs some renaming.

--- a/demos/pmt/index.html
+++ b/demos/pmt/index.html
@@ -23,6 +23,7 @@
 
     <!-- All styling for PMT is here -->
     <link rel="stylesheet" type="text/css" href="../../src/shared/adjusters/css/adjusters.css" />
+    <link rel="stylesheet" type="text/css" href="../../src/shared/adjusters/css/style-speakText.css" />
 
     <!-- The Infusion Library -->
     <script type="text/javascript" src="../../src/shared/lib/infusion/MyInfusion.js"></script>
