--- a/src/shared/adjusters/html/onOffSwitchTemplate.html
+++ b/src/shared/adjusters/html/onOffSwitchTemplate.html
@@ -1,7 +1,7 @@
-<h3><label for="screenReaderTTSEnabled" class="gpiic-speakText-screenReaderTTSEnabled-label gpii-speakText-switch"></label></h3>
-<div id="gpii-speakText-screenReaderOnOff" class="fl-prefsEditor-onoff">
-    <input type="checkbox" id="screenReaderTTSEnabled" class="gpiic-speakText-screenReaderTTSEnabled"/>
-    <label for="screenReaderTTSEnabled" class="gpiic-onOffSwitch-label">
+<h3><label for="onOffSwitchInput" class="gpiic-onOffSwitch-label gpii-onOffSwitch-switch"></label></h3>
+<div id="gpii-onOffSwitch-onOff" class="fl-prefsEditor-onoff">
+    <input type="checkbox" id="onOffSwitchInput" class="gpiic-onOffSwitch-input"/>
+    <label for="onOffSwitchInput">
         <span class="fl-prefsEditor-switch" data-checkboxStateOn="ON" data-checkboxStateOff="OFF" tabindex="0">
             <span class="fl-prefsEditor-switch-inner"></span>
         </span>
