--- a/demos/pmt/index.html
+++ b/demos/pmt/index.html
@@ -29,6 +29,7 @@
     <script type="text/javascript" src="../../src/shared/lib/infusion/MyInfusion.js"></script>
 
     <!-- The custom adjusters JS files -->
+    <script type="text/javascript" src="../../src/shared/adjusters/js/onOffSwitch.js"></script>
     <script type="text/javascript" src="../../src/shared/adjusters/js/addContrast.js"></script>
     <script type="text/javascript" src="../../src/shared/adjusters/js/contrastTheme.js"></script>
     <script type="text/javascript" src="../../src/shared/adjusters/js/contrastEnabled.js"></script>
