GPII-271: Labels Announce & Read-back now extracted from message.json, Headers are no longer visual representation of checkboxes (since they don't impose animation), couple of styles added.

--- a/src/pcp/pcpContainer.html
+++ b/src/pcp/pcpContainer.html
@@ -6,7 +6,7 @@
             <label for="visualAlternativesPresetButton" class="gpii-visualAlternativesPresetButton-label preset-button-label"></label>
             <label for="visualAlternativesPresetButton" class="visualAlternatives-main-icon main-icon"></label>
             <label for="visualAlternativesPresetButton" class="visualAlternatives-white-tick-icon white-tick-icon"></label><br>
-            <div class="spacing-ensurer"></div>
+            <div class="gpii-spacingEnsurer"></div>
 
             <div class="speakText"></div>
             <div class="words-spoken-per-minute"></div>
@@ -19,7 +19,7 @@
             <label for="volumePresetButton" class="gpii-volumePresetButton-label preset-button-label"></label>
             <label for="volumePresetButton" class="volume-main-icon main-icon"></label>
             <label for="volumePresetButton" class="universalVolume-white-tick-icon white-tick-icon"></label><br>
-            <div class="spacing-ensurer"></div><br>
+            <div class="gpii-spacingEnsurer"></div><br>
 
             <div class="universalVolume"></div>
 
@@ -27,7 +27,7 @@
             <label for="languagePresetButton" class="gpii-languagePresetButton-label preset-button-label"></label>
             <label for="languagePresetButton" class="language-main-icon main-icon"></label>
             <label for="languagePresetButton" class="universalLanguage-white-tick-icon white-tick-icon"></label><br>
-            <div class="spacing-ensurer"></div><br>
+            <div class="gpii-spacingEnsurer"></div><br>
 
             <div class="universalLanguage"></div>
         </div>
