--- a/src/pmt/pmtContainer.html
+++ b/src/pmt/pmtContainer.html
@@ -2,11 +2,10 @@
     <div class="flc-prefsEditor-controls">
         <div class="fl-prefsEditor-category">
 
-            <input type="checkbox" id="visualAlternativesPresetButton" class="gpii-visualAlternativesPresetButton"/>
-            <label for="visualAlternativesPresetButton" class="gpii-visualAlternativesPresetButton-label preset-button-label"></label>
-            <label for="visualAlternativesPresetButton" class="visualAlternatives-main-icon main-icon"></label>
-            <label for="visualAlternativesPresetButton" class="visualAlternatives-white-tick-icon white-tick-icon"></label><br>
-            <div class="spacing-ensurer"></div>
+            <label class="gpii-visualAlternativesPresetButton-label preset-button-label"></label>
+            <label class="visualAlternatives-main-icon main-icon"></label>
+            <label class="visualAlternatives-white-tick-icon white-tick-icon"></label><br>
+            <div class="gpii-spacingEnsurer"></div>
 
             <div class="speakText"></div>
             <div class="words-spoken-per-minute"></div>
@@ -27,23 +26,19 @@
                 </div>
             </div>
 
-            <div class="braille"></div>
+            <div class="braille"></div><br>
 
-            <br>
-
-            <input type="checkbox" id="volumePresetButton" class="gpii-volumePresetButton"/>
-            <label for="volumePresetButton" class="gpii-volumePresetButton-label preset-button-label"></label>
-            <label for="volumePresetButton" class="volume-main-icon main-icon"></label>
-            <label for="volumePresetButton" class="universalVolume-white-tick-icon white-tick-icon"></label><br>
-            <div class="spacing-ensurer"></div><br>
+            <label class="gpii-volumePresetButton-label preset-button-label"></label>
+            <label class="volume-main-icon main-icon"></label>
+            <label class="universalVolume-white-tick-icon white-tick-icon"></label><br>
+            <div class="gpii-spacingEnsurer"></div><br>
 
             <div class="universalVolume"></div>
 
-            <input type="checkbox" id="languagePresetButton" class="gpii-languagePresetButton"/>
-            <label for="languagePresetButton" class="gpii-languagePresetButton-label preset-button-label"></label>
-            <label for="languagePresetButton" class="language-main-icon main-icon"></label>
-            <label for="languagePresetButton" class="universalLanguage-white-tick-icon white-tick-icon"></label><br>
-            <div class="spacing-ensurer"></div><br>
+            <label class="gpii-languagePresetButton-label preset-button-label"></label>
+            <label class="language-main-icon main-icon"></label>
+            <label class="universalLanguage-white-tick-icon white-tick-icon"></label><br>
+            <div class="gpii-spacingEnsurer"></div><br>
 
             <div class="universalLanguage"></div>
         </div>
