--- a/src/shared/adjusters/html/punctuationVerbosityTemplate.html
+++ b/src/shared/adjusters/html/punctuationVerbosityTemplate.html
@@ -1,5 +1,5 @@
-<div class="gpii-adjusters gpii-fully-expanded">
-    <div class="gpii-label"> Announce </div>
+<div class="gpii-adjusters gpii-fully-expanded gpii-punctuationVerbosity">
+    <div class="gpii-announceLabel gpii-announce gpii-label"></div>
         <label class="gpiic-punctuationVerbosity-label gpii-description"></label>
         <div class="gpii-punctuationVerbosity-container">
             <div class="gpiic-punctuationVerbosity-row">
