--- a/src/shared/adjusters/html/screenReaderLanguageTemplate.html
+++ b/src/shared/adjusters/html/screenReaderLanguageTemplate.html
@@ -1,4 +1,4 @@
-<div class="gpii-adjusters gpii-fully-expanded ui-widget">
+<div class="gpii-adjusters gpii-fully-expanded gpii-combobox ui-widget">
     <label class="gpiic-screenReaderLanguage-label gpii-label"></label><br>
     <select class="gpiic-screenReaderLanguage"></select>
 </div>
