GPII-153, GPII-187: Using conditional panels
Switched the pcp example to make use of the conditional panels. Also simplified the code by removing the unused parts.

--- a/src/shared/adjusters/html/visualAlternativesTemplate.html
+++ b/src/shared/adjusters/html/visualAlternativesTemplate.html
@@ -1,41 +1,23 @@
-<input type="checkbox" id="addToMyPreferencesSpeakText"/>
-<div class="fl-adjuster-icons-additional addToMyPreferencesStar"></div>
-<label class="addToMyPreferencesLabel" for="addToMyPreferencesSpeakText" tooltip-checked="Remove from my preferences" tooltip-unchecked="Add to my preferences" title=""></label>
-
-<input type="checkbox" id="presetButton" class="gpii-speakTextPresetButton"/>
-<label for="presetButton" class="gpiic-speakTextPresetButton-label preset-button-label"></label>
-<label for="presetButton" class="white-baloon-icon"></label>
-<label for="presetButton" class="white-tick-icon"></label><br>
+<h2 class="gpiic-speakTextPresetButton-label preset-button-label"></h2>
 <div class="spacing-ensurer"></div>
 
 <div class="gpii-speakText-adjusters">
-    <!-- <div class="gpiic-speakText-screenReader gpii-speakText-fully-expanded gpii-speakText-screenReaderTTSEnabled-element"> -->
+
     <div class="gpiic-speakText-screenReader gpii-speakText-screenReaderTTSEnabled-element">
     </div>
 
-    <!-- <div class="gpii-speakText-partially-expanded"> -->
     <div>
         <div class="gpii-speakText-speechRate-element">
             <div class="gpiic-speakText-speechRate">
             </div>
-        </div><br>
-    </div>
-
-    <!-- <div class="gpii-speakText-fully-expanded"> -->
-    <div>
-        <div class="gpiic-speakText-language"></div>
-        <div class="gpiic-speakText-punctuation"></div>
-        <div class="gpiic-speakText-capitals"></div>
-        <div class="gpiic-speakText-tutorialMessages"></div><br>
-        <div class="gpiic-speakText-readBack-keyEcho"></div>
-        <div class="gpiic-speakText-readBack-wordEcho"></div>
-        <div class="gpiic-speakText-braille"></div>
-    </div>
-
-    <div class="gpii-speakText-partially-expanded">
-        <div class="gpii-speakText-moreOptions">
-            <label class="gpii-speakText-moreOptionsIcon"></label>
-            <label class="gpiic-speakText-moreOptionsLabel"></label>
         </div>
     </div>
+
+    <div class="gpiic-speakText-language"></div>
+    <div class="gpiic-speakText-punctuation"></div>
+    <div class="gpiic-speakText-capitals"></div>
+    <div class="gpiic-speakText-tutorialMessages"></div><br>
+    <div class="gpiic-speakText-readBack-keyEcho"></div>
+    <div class="gpiic-speakText-readBack-wordEcho"></div>
+    <div class="gpiic-speakText-braille"></div>
 </div>
