--- a/src/shared/adjusters/html/increaseSizeTemplate.html
+++ b/src/shared/adjusters/html/increaseSizeTemplate.html
@@ -1,57 +1,30 @@
-<input type="checkbox" id="preferenceSwitchIncreaseSize" class="gpiic-increaseSize-preferenceSwitch"/>
+
 <div class="gpii-prefsEditor-headerImage gpii-prefsEditor-adjusterIcons gpii-prefsEditor-adjusterIcons-sept-12">
     <label class="gpii-prefsEditor-headerTitle gpiic-headerTitle"></label>
-    <div class="gpii-prefsEditor-headerImageTick gpii-prefsEditor-adjusterIcons gpii-prefsEditor-adjusterIcons-sept-12"></div>
 </div>
 <label class="gpii-prefsEditor-headerTitle gpiic-headerTitle gpii-prefsEditor-headerClickableLabel" for="preferenceSwitchIncreaseSize"></label>
 
-<input type="checkbox" id="addToMyPreferencesIncreaseSize"/>
-<div class="gpii-prefsEditor-adjusterIcons gpii-prefsEditor-adjusterIconsAdditional gpii-prefsEditor-addToMyPreferencesStar">
-</div>
-<label class="gpii-prefsEditor-addToMyPreferencesLabel gpiic-addToMyPreferencesLabel" for="addToMyPreferencesIncreaseSize" tooltip-checked="" tooltip-unchecked="" title=""></label>
-
 <div class="gpii-increaseSizePreferenceGroup">
 
-    <div class="gpii-prefsEditor-category-hidden gpiic-category-hidden fl-prefsEditor-text">
-        <div class="gpii-prefsEditor-expandedHeading gpii-prefsEditor-category gpiic-category fl-prefsEditor-text">
-            <h2 class="gpii-prefsEditor-firstHeading"><label class="gpiic-increaseSize-appearanceHeading"></label></h2>
-        </div>
+    <div class="gpii-prefsEditor-expandedHeading gpii-prefsEditor-category gpiic-category fl-prefsEditor-text">
+        <h2 class="gpii-prefsEditor-firstHeading"><label class="gpiic-increaseSize-appearanceHeading"></label></h2>
     </div>
 
-    <div class="gpiic-prefsEditor-textSize">
-    </div>
-    <div class="gpii-prefsEditor-category gpiic-category fl-prefsEditor-text">
-    </div>
+    <div class="gpiic-prefsEditor-textSize"></div>
 
-    <div class="gpiic-prefsEditor-cursorSize">
-    </div>
-    <div class="gpii-prefsEditor-category gpiic-category fl-prefsEditor-text">
-    </div>
+    <div class="gpiic-prefsEditor-cursorSize"></div>
 
 
-    <div class="gpii-prefsEditor-category-hidden gpiic-category-hidden fl-prefsEditor-text">
-        <div class="gpii-prefsEditor-expandedHeading gpii-prefsEditor-category gpiic-category fl-prefsEditor-text">
-            <h2><label class="gpiic-increaseSize-magnifierHeading"></label></h2>
-        </div>
+    <div class="gpii-prefsEditor-expandedHeading gpii-prefsEditor-category gpiic-category fl-prefsEditor-text">
+        <h2><label class="gpiic-increaseSize-magnifierHeading"></label></h2>
     </div>
 
-    <div class="gpiic-prefsEditor-magnifier">
-    </div>
-    <div class="gpii-prefsEditor-category gpiic-category fl-prefsEditor-text">
-    </div>
+    <div class="gpiic-prefsEditor-magnifier"></div>
+    <div class="gpii-prefsEditor-category gpiic-category fl-prefsEditor-text"></div>
 
-    <div class="gpiic-prefsEditor-magnifierPosition">
-    </div>
-    <div class="gpiic-prefsEditor-magnifierFollows">
-    </div>
+    <div class="gpiic-prefsEditor-magnifierPosition"></div>
+    <div class="gpiic-prefsEditor-magnifierFollows"></div>
 
-    <input type="checkbox" id="preferenceSwitchIncreaseSizeExtra" class="gpiic-increaseSize-preferenceSwitchExtra"/>
-    <div class="gpii-prefsEditor-category-hidden gpiic-category-hidden fl-prefsEditor-text">
-        <div class="gpii-prefsEditor-category gpiic-category fl-prefsEditor-text">
-        </div>
-        <div class="gpii-prefsEditor-category gpiic-category fl-prefsEditor-text">
-        </div>
-    </div>
-
-    <label for="preferenceSwitchIncreaseSizeExtra" class="gpii-prefsEditor-moreLess gpiic-moreLess gpii-prefsEditor-category gpiic-category">&nbsp;</label>
+    <div class="gpii-prefsEditor-category gpiic-category fl-prefsEditor-text"></div>
+    <div class="gpii-prefsEditor-category gpiic-category fl-prefsEditor-text"></div>
 </div>
