GPII-365: Added the magnifierEnabled adjuster.

--- a/demos/pmt/index.html
+++ b/demos/pmt/index.html
@@ -38,6 +38,7 @@
     <script type="text/javascript" src="../../src/shared/adjusters/js/increaseSize.js"></script>
     <script type="text/javascript" src="../../src/shared/adjusters/js/textSize.js"></script>
     <script type="text/javascript" src="../../src/shared/adjusters/js/cursorSize.js"></script>
+    <script type="text/javascript" src="../../src/shared/adjusters/js/magnifierEnabled.js"></script>
     <script type="text/javascript" src="../../src/shared/adjusters/js/magnifier.js"></script>
     <script type="text/javascript" src="../../src/shared/adjusters/js/magnifierPosition.js"></script>
     <script type="text/javascript" src="../../src/shared/adjusters/js/magnifierFollows.js"></script>
