--- a/src/shared/adjusters/html/increaseSizeTemplate.html
+++ b/src/shared/adjusters/html/increaseSizeTemplate.html
@@ -35,6 +35,8 @@
         </div>
     </div>
 
+    <div class="gpiic-prefsEditor-magnifierEnabled">
+    </div>
     <div class="gpiic-prefsEditor-magnifier">
     </div>
     <div class="gpii-prefsEditor-category gpiic-category fl-prefsEditor-text">
