GPII-365: Added the magnifierInvertColours adjuster.

--- a/demos/pmt/index.html
+++ b/demos/pmt/index.html
@@ -40,6 +40,7 @@
     <script type="text/javascript" src="../../src/shared/adjusters/js/cursorSize.js"></script>
     <script type="text/javascript" src="../../src/shared/adjusters/js/magnifierEnabled.js"></script>
     <script type="text/javascript" src="../../src/shared/adjusters/js/magnifier.js"></script>
+    <script type="text/javascript" src="../../src/shared/adjusters/js/magnifierInvertColours.js"></script>
     <script type="text/javascript" src="../../src/shared/adjusters/js/magnifierPosition.js"></script>
     <script type="text/javascript" src="../../src/shared/adjusters/js/magnifierFollows.js"></script>
 
