--- a/src/shared/adjusters/html/increaseSizeTemplate.html
+++ b/src/shared/adjusters/html/increaseSizeTemplate.html
@@ -39,6 +39,8 @@
     </div>
     <div class="gpiic-prefsEditor-magnifier">
     </div>
+    <div class="gpiic-prefsEditor-magnifierInvertColours">
+    </div>
     <div class="gpii-prefsEditor-category gpiic-category fl-prefsEditor-text">
     </div>
 
