GPII-365: Added the showCrosshairs adjuster.

--- a/demos/pmt/index.html
+++ b/demos/pmt/index.html
@@ -44,6 +44,7 @@
     <script type="text/javascript" src="../../src/shared/adjusters/js/magnifierPosition.js"></script>
     <script type="text/javascript" src="../../src/shared/adjusters/js/followingElement.js"></script>
     <script type="text/javascript" src="../../src/shared/adjusters/js/magnifierFollowsFollowingElement.js"></script>
+    <script type="text/javascript" src="../../src/shared/adjusters/js/showCrosshairs.js"></script>
 
     <!-- The JS files of the enactors of my custom adjusters -->
     <script type="text/javascript" src="../../src/shared/enactors/js/contrastTheme.js"></script>
