--- a/src/shared/adjusters/html/iconCheckTemplate.html
+++ b/src/shared/adjusters/html/iconCheckTemplate.html
@@ -1,3 +1,4 @@
+<label class="gpiic-iconCheckAdjusterTitle"></label>
 <input type="checkbox" id="preferenceSwitchIconCheckAdjuster"/>
 <label for="preferenceSwitchIconCheckAdjuster" class="gpii-iconCheckAdjusterArea">
 	<div class="gpiic-iconCheckAdjusterIcon gpii-iconCheckAdjusterIcon gpii-prefsEditor-adjusterIcons"></div>
