--- a/src/shared/adjusters/html/increaseSizeTemplate.html
+++ b/src/shared/adjusters/html/increaseSizeTemplate.html
@@ -48,6 +48,8 @@
     </div>
     <div class="gpiic-prefsEditor-magnifierFollows">
     </div>
+    <div class="gpiic-prefsEditor-showCrosshairs">
+    </div>
 
     <input type="checkbox" id="preferenceSwitchIncreaseSizeExtra" class="gpiic-increaseSize-preferenceSwitchExtra"/>
     <div class="gpii-prefsEditor-category-hidden gpiic-category-hidden fl-prefsEditor-text">
