GPII-271: The common part of PCP's & PMT's prefsEditor.js moved to common.js, creating the common fullNoPreview component, which later both PCP & PMT obtain through grade merging.

--- a/demos/pcp/index.html
+++ b/demos/pcp/index.html
@@ -25,6 +25,7 @@
         
         <script type="text/javascript" src="../../src/shared/adjusters/js/textfieldStepper.js"></script>
 
+        <script type="text/javascript" src="../../src/shared/adjusters/js/common.js"></script>
         <script type="text/javascript" src="../../src/pcp/prefsEditor.js"></script>
         <script type="text/javascript" src="demo.js"></script>
 
