--- a/demos/pmt/index.html
+++ b/demos/pmt/index.html
@@ -25,6 +25,7 @@
         <script type="text/javascript" src="../../src/shared/adjusters/js/textfieldStepper.js"></script>
         <script type="text/javascript" src="../../src/shared/adjusters/js/Panels.js"></script>
 
+        <script type="text/javascript" src="../../src/shared/adjusters/js/common.js"></script>
         <script type="text/javascript" src="../../src/pmt/prefsEditor.js"></script>
         <script type="text/javascript" src="demo.js"></script>
 
