--- a/demos/adjustersPilots2/index.html
+++ b/demos/adjustersPilots2/index.html
@@ -31,6 +31,7 @@
     <script type="text/javascript" src="../../src/shared/i18n/js/i18n.js"></script>
 
     <!-- The custom adjusters JS files -->
+    <script type="text/javascript" src="../../src/shared/adjusters/js/iconCheck.js"></script>
     <script type="text/javascript" src="../../src/shared/adjusters/js/magnifierInvertColours.js"></script>
     <script type="text/javascript" src="../../src/shared/adjusters/js/showCrosshairs.js"></script>
     <script type="text/javascript" src="../../src/shared/adjusters/js/followingElement.js"></script>
