--- a/demos/pmt/index.html
+++ b/demos/pmt/index.html
@@ -32,6 +32,7 @@
     <script type="text/javascript" src="../../src/shared/components/textfieldStepper/js/textfieldStepper.js"></script>
     <script type="text/javascript" src="../../src/shared/adjusters/js/textfieldStepper.js"></script>
     <script type="text/javascript" src="../../src/shared/adjusters/js/onOffSwitch.js"></script>
+    <script type="text/javascript" src="../../src/shared/adjusters/js/iconCheck.js"></script>
     <script type="text/javascript" src="../../src/shared/adjusters/js/addContrast.js"></script>
     <script type="text/javascript" src="../../src/shared/adjusters/js/contrastTheme.js"></script>
     <script type="text/javascript" src="../../src/shared/adjusters/js/contrastEnabled.js"></script>
