GPII-364: Corrected the layout of "Add contrast" adjuster group.

--- a/src/shared/adjusters/html/contrastThemeTemplate.html
+++ b/src/shared/adjusters/html/contrastThemeTemplate.html
@@ -1,4 +1,4 @@
-<label class="gpii-contrast-contrastOptions gpiic-contrast-contrastOptions"></label>
+<h4 class="gpii-contrast-contrastOptions gpiic-contrast-contrastOptions"></h4>
 <div class="gpii-prefsEditor-previewPerSettingContainer">
     <div class="gpii-prefsEditor-adjusterIcons gpii-prefsEditor-previewPerSettingEye"></div>
     <div class="gpii-prefsEditor-previewPerSettingEyeBackground"></div>
