GPII-365: Working on the layout of "Increase size" adjuster group.

--- a/src/shared/adjusters/html/cursorSizeTemplate.html
+++ b/src/shared/adjusters/html/cursorSizeTemplate.html
@@ -1,4 +1,4 @@
-<h3><label class="gpiic-increaseSize-cursor-size-label" for="cursor-size"></label></h3>
+<h4 class="gpiic-increaseSize-cursor-size-label"></h4>
 
 <div class="gpii-prefsEditor-adjusterIcons gpii-prefsEditor-previewPerSettingContainer">
     <div class="gpii-prefsEditor-adjusterIcons gpii-prefsEditor-previewPerSettingEye"></div>
