--- a/src/shared/adjusters/html/magnifierPositionTemplate.html
+++ b/src/shared/adjusters/html/magnifierPositionTemplate.html
@@ -1,6 +1,4 @@
-<h3>
-    <label class="gpiic-increaseSize-magnifierPositionHeading"></label>
-</h3>
+<h4 class="gpiic-increaseSize-magnifierPositionHeading"></h4>
 <div class="gpiic-increaseSize-magnifierPositionRow fl-choice gpii-prefsEditor-choice">
     <input type="radio" class="gpiic-increaseSize-magnifierPositionInput" name="magnifierPosition" id="magnifierPosition" />
     <div class="fl-indicator gpii-prefsEditor-indicator"></div>
