--- a/src/shared/adjusters/html/textSizeTemplate.html
+++ b/src/shared/adjusters/html/textSizeTemplate.html
@@ -1,16 +1,16 @@
-        <div>
-            <h2><label class="gpiic-textSize-label"></label></h2>
+<div>
+    <h4 class="gpiic-textSize-label"></h4>
 
-            <div class="gpii-prefsEditor-previewPerSettingContainer">
-                <div class="gpii-prefsEditor-adjusterIcons gpii-prefsEditor-previewPerSettingEye"></div>
-                <div class="gpii-prefsEditor-previewPerSettingEyeBackground"></div>
-                <iframe class="gpiic-textSize-preview gpii-prefsEditor-previewPerSettingFrame" src="" frameborder="0"></iframe>
-            </div>
+    <div class="gpii-prefsEditor-previewPerSettingContainer">
+        <div class="gpii-prefsEditor-adjusterIcons gpii-prefsEditor-previewPerSettingEye"></div>
+        <div class="gpii-prefsEditor-previewPerSettingEyeBackground"></div>
+        <iframe class="gpiic-textSize-preview gpii-prefsEditor-previewPerSettingFrame" src="" frameborder="0"></iframe>
+    </div>
 
-            <div class="gpiic-textSize-stepper gpii-stepper">
-                <label class="gpiic-textfieldStepper-decrement gpii-stepper-buttons"></label>
-                <input type="text" class="gpiic-textfieldStepper-valueField gpii-stepper-valueField fl-inputs"/>
-                <label class="gpiic-textfieldStepper-unitField gpii-stepper-unit"></label>
-                <label class="gpiic-textfieldStepper-increment gpii-stepper-buttons"></label>
-            </div>
-        </div>
+    <div class="gpiic-textSize-stepper gpii-stepper">
+        <label class="gpiic-textfieldStepper-decrement gpii-stepper-buttons"></label>
+        <input type="text" class="gpiic-textfieldStepper-valueField gpii-stepper-valueField fl-inputs"/>
+        <label class="gpiic-textfieldStepper-unitField gpii-stepper-unit"></label>
+        <label class="gpiic-textfieldStepper-increment gpii-stepper-buttons"></label>
+    </div>
+</div>
