GPII-365: Working on the layout of "Increase size" adjuster group.

--- a/src/shared/adjusters/html/iconCheckTemplate.html
+++ b/src/shared/adjusters/html/iconCheckTemplate.html
@@ -1,4 +1,4 @@
-<label class="gpiic-iconCheckAdjusterTitle"></label>
+<h4 class="gpiic-iconCheckAdjusterTitle"></h4>
 <input type="checkbox" id="preferenceSwitchIconCheckAdjuster"/>
 <label for="preferenceSwitchIconCheckAdjuster" class="gpii-iconCheckAdjusterArea">
 	<div class="gpiic-iconCheckAdjusterIcon gpii-iconCheckAdjusterIcon gpii-prefsEditor-adjusterIcons"></div>
