--- a/src/shared/adjusters/html/followingElementTemplate.html
+++ b/src/shared/adjusters/html/followingElementTemplate.html
@@ -1,6 +1,4 @@
-<h2>
-    <label class="gpiic-followingElementHeading"></label>
-</h2>
+<h4 class="gpiic-followingElementHeading"></h4>
 <div class="gpii-followingElementRow gpiic-followingElementRow">
 	<input type="checkbox" class="gpiic-followingElementInput" id="followingElement" name="followingElement"/>
 	<label for="followingElement" class="gpii-iconCheckAdjusterArea gpiic-followingElementLabel">
