--- a/src/shared/adjusters/html/iconCheckTemplateInvertColours.html
+++ b/src/shared/adjusters/html/iconCheckTemplateInvertColours.html
@@ -1,4 +1,4 @@
-<label class="gpiic-iconCheckAdjusterTitle"></label>
+<h4 class="gpiic-iconCheckAdjusterTitle"></h4>
 <input type="checkbox" id="preferenceSwitchIconCheckAdjusterInvertColours"/>
 <label for="preferenceSwitchIconCheckAdjusterInvertColours" class="gpii-iconCheckAdjusterArea">
 	<div class="gpiic-iconCheckAdjusterIcon gpii-iconCheckAdjusterIcon gpii-prefsEditor-adjusterIcons"></div>
