NOJIRA: First working version of frames. It contains all "Add contrast" and "Increase size" adjusters. Needs some styling corrections.

--- a/src/pilot2Frames/pmt/html/PrefsEditorTemplate-PMT.html
+++ b/src/pilot2Frames/pmt/html/PrefsEditorTemplate-PMT.html
@@ -12,7 +12,11 @@
     </div>
     <div class="gpii-prefsEditor-preferencesContainer">
         <div class="gpii-prefsEditor-preferences gpiic-prefsEditor-preferences">
-            
+            <div class="contrastPreferenceGroup">
+                <div class="gpiic-prefsEditor-contrastPanel gpii-prefsEditor-contrastPanel"></div>
+            </div>
+            <div class="gpiic-prefsEditor-increaseSizePanel gpii-prefsEditor-increaseSizePanel">
+            </div>
         </div>
     </div>
     <div class="gpii-pmt-bottomRow">
