--- a/demos/pmt/index.html
+++ b/demos/pmt/index.html
@@ -22,11 +22,15 @@
     <link href='http://fonts.googleapis.com/css?family=Open+Sans:400,600,700,800' rel='stylesheet' type='text/css'>
 
     <!-- All styling for PMT is here -->
+    <link rel="stylesheet" type="text/css" href="../../src/shared/frames/css/frames.css" />
     <link rel="stylesheet" type="text/css" href="../../src/shared/adjusters/css/style-speakText.css" />
     <link rel="stylesheet" type="text/css" href="../../src/shared/adjusters/css/adjusters.css" />
 
     <!-- The Infusion Library -->
     <script type="text/javascript" src="../../src/shared/lib/infusion/MyInfusion.js"></script>
+
+    <!-- The GPIIPrefsEditor JS files -->
+    <script type="text/javascript" src="../../src/shared/frames/js/GPIIPrefsEditor.js"></script>
 
     <!-- The custom adjusters JS files -->
     <script type="text/javascript" src="../../src/shared/components/textfieldStepper/js/textfieldStepper.js"></script>
@@ -59,6 +63,7 @@
     <!-- PMT-specific files -->
     <script type="text/javascript" src="../../src/shared/schemas/js/primarySchema.js"></script>
     <script type="text/javascript" src="../../src/shared/schemas/js/pmtSchema.js"></script>
+    <script type="text/javascript" src="../../src/pilot2Frames/pmt/js/Pilot2PMTDefaults.js"></script>
     <script type="text/javascript" src="../../src/pmt/js/PMT.js"></script>
 
     <!-- The demo script -->
