--- a/demos/pmtNoFrame/index.html
+++ b/demos/pmtNoFrame/index.html
@@ -62,9 +62,9 @@
 
     <!-- PMT-specific files -->
     <script type="text/javascript" src="../../src/shared/schemas/js/primarySchema.js"></script>
-    <script type="text/javascript" src="../../src/shared/schemas/js/pmtSchema.js"></script>
+    <script type="text/javascript" src="../../src/shared/schemas/js/pmtSchemaNoFrame.js"></script>
     <script type="text/javascript" src="../../src/pilot2Frames/pmt/js/Pilot2PMTDefaults.js"></script>
-    <script type="text/javascript" src="../../src/pmt/js/PMTFrame.js"></script>
+    <script type="text/javascript" src="../../src/pmt/js/PMT.js"></script>
 
     <!-- The demo script -->
     <script type="text/javascript" src="demo.js"></script>
