--- a/src/pilot2Frames/pmt/html/PrefsEditorTemplate-PMT.html
+++ b/src/pilot2Frames/pmt/html/PrefsEditorTemplate-PMT.html
@@ -12,11 +12,8 @@
     </div>
     <div class="gpii-prefsEditor-preferencesContainer">
         <div class="gpii-prefsEditor-preferences gpiic-prefsEditor-preferences">
-            <div class="contrastPreferenceGroup">
-                <div class="gpiic-prefsEditor-contrastPanel gpii-prefsEditor-contrastPanel"></div>
-            </div>
-            <div class="gpiic-prefsEditor-increaseSizePanel gpii-prefsEditor-increaseSizePanel">
-            </div>
+            <div class="gpiic-prefsEditor-contrastPanel gpii-prefsEditor-contrastPanel gpii-prefsEditor-adjusterGroup"></div>
+            <div class="gpiic-prefsEditor-increaseSizePanel gpii-prefsEditor-increaseSizePanel gpii-prefsEditor-adjusterGroup"></div>
         </div>
     </div>
     <div class="gpii-pmt-bottomRow">
