--- a/src/shared/adjusters/html/increaseSizeTemplate.html
+++ b/src/shared/adjusters/html/increaseSizeTemplate.html
@@ -1,13 +1,13 @@
 <input type="checkbox" id="preferenceSwitchIncreaseSize" class="gpiic-increaseSize-preferenceSwitch"/>
 <div class="gpii-prefsEditor-headerImage gpii-prefsEditor-adjusterIcons gpii-prefsEditor-adjusterIcons-sept-12">
     <label class="gpii-prefsEditor-headerTitle gpiic-headerTitle gpii-prefsEditor-headerClickableLabel" for="preferenceSwitchIncreaseSize"></label>
-    <div class="gpii-prefsEditor-headerImageTick gpii-prefsEditor-adjusterIcons gpii-prefsEditor-adjusterIcons-sept-12"></div>
+    <div style="display:none !important" class="gpii-prefsEditor-headerImageTick gpii-prefsEditor-adjusterIcons gpii-prefsEditor-adjusterIcons-sept-12"></div>
 </div>
 
 <input type="checkbox" id="addToMyPreferencesIncreaseSize"/>
-<div class="gpii-prefsEditor-adjusterIcons gpii-prefsEditor-adjusterIconsAdditional gpii-prefsEditor-addToMyPreferencesStar">
+<div style="display:none !important" class="gpii-prefsEditor-adjusterIcons gpii-prefsEditor-adjusterIconsAdditional gpii-prefsEditor-addToMyPreferencesStar">
 </div>
-<label class="gpii-prefsEditor-addToMyPreferencesLabel gpiic-addToMyPreferencesLabel" for="addToMyPreferencesIncreaseSize" tooltip-checked="" tooltip-unchecked="" title=""></label>
+<label style="display:none !important" class="gpii-prefsEditor-addToMyPreferencesLabel gpiic-addToMyPreferencesLabel" for="addToMyPreferencesIncreaseSize" tooltip-checked="" tooltip-unchecked="" title=""></label>
 
 <div class="gpii-increaseSizePreferenceGroup">
 
