NOJIRA: Added some greek translations for frames. i18n'ed the "save & apply" button.

--- a/src/pilot2Frames/pmt/html/PrefsEditorTemplate-PMT.html
+++ b/src/pilot2Frames/pmt/html/PrefsEditorTemplate-PMT.html
@@ -21,7 +21,7 @@
         <span class="gpii-prefsEditor-saveButtonContainer">
             <label for="pmtSaveButton" class="gpii-prefsEditor-frameIcon gpii-pmt-saveAndApplyButtonLabel">
             </label>
-            <input id="pmtSaveButton" class="flc-prefsEditor-save fl-prefsEditor-save gpii-prefsEditor-save" type="button" value="save & apply" />
+            <input id="pmtSaveButton" class="flc-prefsEditor-save fl-prefsEditor-save gpii-prefsEditor-save" type="button" value="" />
             <input id="pmtResetButton" class="flc-prefsEditor-reset gpii-prefsEditor-reset" type="button" value="" />
         </span>
         <div class="gpii-prefsEditor-notification gpiic-prefsEditor-notification">
