GPII-271: The PCP part is now using Composite & Conditional panels.

--- a/src/pcp/pcpContainer.html
+++ b/src/pcp/pcpContainer.html
@@ -15,27 +15,21 @@
 
             <br>
 
-            <input type="checkbox" id="volumePresetButton" class="gpii-volumePresetButton"/>
+<!--             <input type="checkbox" id="volumePresetButton" class="gpii-volumePresetButton"/>
             <label for="volumePresetButton" class="gpii-volumePresetButton-label preset-button-label"></label>
             <label for="volumePresetButton" class="volume-main-icon main-icon"></label>
             <label for="volumePresetButton" class="universalVolume-white-tick-icon white-tick-icon"></label><br>
             <div class="gpii-spacingEnsurer"></div><br>
 
-            <div class="universalVolume"></div>
+            <div class="universalVolume"></div> -->
 
-            <input type="checkbox" id="languagePresetButton" class="gpii-languagePresetButton"/>
+<!--             <input type="checkbox" id="languagePresetButton" class="gpii-languagePresetButton"/>
             <label for="languagePresetButton" class="gpii-languagePresetButton-label preset-button-label"></label>
             <label for="languagePresetButton" class="language-main-icon main-icon"></label>
             <label for="languagePresetButton" class="universalLanguage-white-tick-icon white-tick-icon"></label><br>
             <div class="gpii-spacingEnsurer"></div><br>
 
-            <div class="universalLanguage"></div>
+            <div class="universalLanguage"></div> -->
         </div>
     </div>
 </form>
-
-<div class="fl-text-align-center fl-prefsEditor-buttons">
-    <input class="flc-prefsEditor-save" type="button" />
-    <input class="flc-prefsEditor-reset" type="button" />
-    <input class="flc-prefsEditor-cancel" type="button" />
-</div>
