--- a/demos/pcp/index.html
+++ b/demos/pcp/index.html
@@ -26,6 +26,9 @@
         <script type="text/javascript" src="../../src/shared/adjusters/js/textfieldStepper.js"></script>
 
         <script type="text/javascript" src="../../src/shared/adjusters/js/common.js"></script>
+        <script type="text/javascript" src="../../src/shared/adjusters/js/speakTextCollectivePanel.js"></script>
+        <script type="text/javascript" src="../../src/shared/adjusters/js/volumeCollectivePanel.js"></script>
+        <script type="text/javascript" src="../../src/shared/adjusters/js/languageCollectivePanel.js"></script>
         <script type="text/javascript" src="../../src/pcp/prefsEditor.js"></script>
         <script type="text/javascript" src="demo.js"></script>
 
