--- a/src/shared/adjusters/html/iconCheckTemplateInvertColours.html
+++ b/src/shared/adjusters/html/iconCheckTemplateInvertColours.html
@@ -3,8 +3,8 @@
 <label for="preferenceSwitchIconCheckAdjusterInvertColours" class="gpii-iconCheckAdjusterArea">
 	<div class="gpiic-iconCheckAdjusterIcon gpii-iconCheckAdjusterIcon gpii-prefsEditor-adjusterIcons"></div>
 	<div class="gpii-iconCheckAdjusterContainer">
-		<label class="gpiic-iconCheckAdjusterDescription gpii-iconCheckAdjusterDescription gpii-table-cell-valign-label"></label>
-		<label class="gpii-table-cell-valign-label">
+		<label for="preferenceSwitchIconCheckAdjusterInvertColours" class="gpiic-iconCheckAdjusterDescription gpii-iconCheckAdjusterDescription gpii-table-cell-valign-label"></label>
+		<label for="preferenceSwitchIconCheckAdjusterInvertColours" class="gpii-table-cell-valign-label">
 			<div class="gpii-prefsEditor-adjusterIcons gpii-prefsEditor-adjusterIcons-sept-12 gpii-iconCheckAdjusterCheckIcon"></div>
 		</label>
 	</div>
