GPII-271: Universal Volume & Language added, Comboboxing of universalLanguage fixed, removed unnecessary HTML from the group containers.

--- a/src/pcp/pcpContainer-Volume.html
+++ b/src/pcp/pcpContainer-Volume.html
@@ -1,10 +1,8 @@
 <form id="options" action="" class="fl-prefsEditor fl-prefsEditor-fullNoPreview fl-col-fixed-72em fl-focus">
     <div class="flc-prefsEditor-controls">
         <div class="fl-prefsEditor-category">
-            <input type="checkbox" id="volumePresetButton" class="gpii-volumePresetButton"/>
             <label for="volumePresetButton" class="gpii-volumePresetButton-label preset-button-label"></label>
-            <label for="volumePresetButton" class="volume-main-icon main-icon"></label>
-            <label for="volumePresetButton" class="universalVolume-white-tick-icon white-tick-icon"></label><br>
+            <label for="volumePresetButton" class="volume-main-icon main-icon"></label><br>
             <div class="gpii-spacingEnsurer"></div><br>
 
             <div class="universalVolume"></div>
